# rust-for-the-iot

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20231013095610_init.up.sql
backend/src/: main.rs
backend/src/actions/: mod.rs
