[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["http2", "headers"] }
color-eyre = "0.6.2"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
sqlx = { version = "0.7.2", features = ["postgres", "macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "1.4", features = ["serde", "v4"] }
